--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev-server": "node-dev index.js",
     "start": "node index.js"
   },
-  "author": "Lusine Baghdasaryan",
+  "author": "Yeva Terteryan",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
